<resources>
    <string name="app_name">DJ Džimo Official</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle">DJ Džimo Official - dj@dzimo.sk</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Domovská webstránka</string>
    <string name="menu_about">O mne</string>
    <string name="menu_playlist">Moje Mixy</string>
    <string name="menu_inspiracia">Inšpirácia</string>
    <string name="menu_email">E-mail</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_patreon">Patreon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inspiracia_label">Inšpirácia z prírody</string>
</resources>