<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/menu_facebook" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_menu_youtube"
            android:title="@string/menu_youtube" />

        <item
            android:id="@+id/nav_patreon"
            android:icon="@drawable/ic_patreon"
            android:title="@string/menu_patreon" />
    </group>
</menu>