<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sk.dzimo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_facebook"
        android:name="sk.dzimo.ui.facebook.FacebookFragment"
        android:label="@string/menu_facebook"
        tools:layout="@layout/fragment_facebook" />

    <fragment
        android:id="@+id/nav_youtube"
        android:name="sk.dzimo.ui.youtube.YoutubeFragment"
        android:label="@string/menu_youtube"
        tools:layout="@layout/fragment_youtube" />

    <fragment
        android:id="@+id/nav_patreon"
        android:name="sk.dzimo.ui.patreon.PatreonFragment"
        android:label="@string/menu_patreon"
        tools:layout="@layout/fragment_patreon" />
</navigation>